[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
tokio = { version = "1.17.0", features = ["full"] }
tokio-util = {version = "0.7.1",features = ["full"] }
tokio-stream = "0.1.8"
futures = { version = "0.3.0", features = ["thread-pool"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
protobuf = "2.27.1"
#bytes = "1.0.0"

#bincode = "1.3.2"
rmp-serde = "1.1.0"
#tokio-bincode = "0.1.0"
